# macos-dualbox-aim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: aimbot_config_v1.json  aimbot_config_v1_0_1.json  config_v1.json  config_v2.json  config_v3.json  config_v4.json  config_v5.json  config_v6.json  config_v61.json  config_v62.json  config_v63.json  config_v64.json  config_v7.json
docs/: architecture.md  current-review.md  latency-findings.md  latency-optimization-attempts.md  model-runtime-v5.md  model-runtime.md  releases.md  runtime-pipeline.md  spec-v7-incremental-pid.md
scripts/: auto_tune_v63.py  auto_tune_v64.py  auto_tune_v7.py  capture_probe.py  convert_onnx_to_coreml.py  latency_tool.py  main_v1.py  main_v1_0_1.py  main_v2.py  main_v3.py  main_v4.py  main_v5.py  main_v6.py  main_v61.py  main_v62.py  main_v63.py  main_v64.py  main_v7.py  probe_v5_capture.py  probe_v5_model.py
src/aimbot/: __init__.py  config.py  controller.py  hotkey.py  inference.py  kmbox.py  tuner.py
src/aimbot/core/: __init__.py
src/aimbot/v1/: __init__.py  config.py  inference.py  kmbox.py
src/macos_dualbox_aim/: __init__.py
src/macos_dualbox_aim/core/: __init__.py  capture.py  hotkey.py  (+1 more)
tests/: test_capture_probe.py  test_core_architecture.py  test_latency_analysis.py  test_model_metadata.py  test_v1.py  test_v2.py  test_v3.py  test_v4.py  test_v5_capture_probe_script.py  test_v5_conversion_script.py  test_v5_main.py  test_v5_model_probe.py  test_v5_model_runtime.py  test_v5_probe_script.py  test_v6.py  test_v61.py  test_v62.py  test_v63.py  test_v64.py  test_v7.py
(+75 files in other folders)
