[project]
name = "aimbot"
version = "0.1.0"
description = "Minimal V1 PIDF aimbot runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coremltools>=9.0",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimbot"]
