[project]
name = "macos-dualbox-aim"
version = "1.1.0"
description = "V1 PIDF aim runtime with latency analysis tooling for macOS dual-box setup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coremltools>=9.0",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macos_dualbox_aim"]
